# BlogProjects

./: .gitignore  LICENSE  README.md
CodeGraphRAG/: .env.example  CodeGraphRAG.ipynb  README.md  pyproject.toml  requirements.ini  requirements.txt
FP-Growth/: fp-growth.ipynb
SageMaker_Async/: sagemaker-async.ipynb
T5-Finetuned/: T5-Finetune-Shakespeare.ipynb
a_graph_convolution_network_in_sagemaker/: Dockerfile  deploy.sh  requirements.txt
a_graph_convolution_network_in_sagemaker/notebooks/: deploy-notebook.ipynb  node-classification.ipynb  stepfunction-notebook.ipynb
a_graph_convolution_network_in_sagemaker/src/: model.py  preprocessing.py  serve.py  train.py
cdk-glue-pythonshell/: README.md  cdk.json  package-lock.json  package.json
cdk-glue-pythonshell/lib/: cdk-glue-pythonshell-stack.ts
great-expectations-wrapper/: README.md  pyproject.toml
great-expectations-wrapper/great_expectations_emr/: cli.py  config.py  helpers.py  s3_store.py  utils.py
great-expectations-wrapper/great_expectations_emr/great_expectations/: great_expectations.yml
great-expectations-wrapper/great_expectations_emr/great_expectations/expectations/: expectations_spark_tutorial.json
great-expectations-wrapper/great_expectations_emr/suites/pipeline_a/: pipeline_a_suites.yml
julia_on_sagemaker/: LifecycleConfig_on_Create.txt  LifecycleConfig_on_Start.txt  README.md  config.json  julia1.6-notebook.yaml
sagemaker_clarify_pre_training_bias_detection/: pre-training-bias-detection.ipynb
sktime_on_sagemaker/: .gitignore  README.md
spark_on_fargate/: .gitignore  build.sbt
(+14 files in other folders)
